# BCI-simulation

./: .gitignore  CMakeLists.txt  README.md
sklearn-env/: pyvenv.cfg
sklearn-env/Scripts/: activate  activate.bat
src/cpp/: ffi_bridge.cpp  ffi_bridge.h  main.cpp
src/python/: attention_hybrid.py  best_attention_model.keras  best_attention_model.onnx  best_cnn_model.keras  best_model.h5  best_model.keras  best_transformer_model.keras  clean.py  cnn.py  cnn_lstm.py  eeg_cnn_model.onnx  eeg_movement_classifier.keras  hybrid.py  input_generator.py  preprocessing.py  python_input_gen.py  python_pipeline.py  rust_input_gen.py  temp_model.keras  to_onnx.py  transformer.py
src/rust/eeg_ml/: Cargo.toml  best_attention_model.onnx
src/rust/eeg_ml/src/: lib.rs
