[package]
name = "eeg_classifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ort = "1.16.3"  # ONNX Runtime binding
ndarray = "0.15" # For array handling
lazy_static = "1.4" # For global session
linfa = "0.6"  # Machine Learning framework

libc = "0.2"  # Required for FFI
